# PyLauncher

./: .gitignore  CHANGELOG.md  README.md  asd.txt  build.sh  com.github.XtreemTHN.PyLauncher.gresource  com.github.XtreemTHN.PyLauncher.gresource.xml  pylauncher.desktop  pyproject.toml  requirements.txt  run.py  run.sh  test.py
pylauncher/: main.py
pylauncher/backend/: config.py  paths.py  run_utils.py  types.py  utils.py  variables.py
pylauncher/frontend/: profiles.py
pylauncher/frontend/blueprints/: profile-conf-page.blp  profile-widget.blp
pylauncher/resources/: com.github.XtremeTHN.PyLauncherUI.gresource.xml
src/: main.c  main.py  test.py  utils.py
src/backend/: config.py  run_utils.py  utils.py  variables.py
src/frontend/: first_dialog.py  profiles.py
src/frontend/blueprints/: logs-page.blp  main.blp  profile-conf-page.blp
src/modules/: application.py  config.py  paths.py  run_utils.py  style.py  types.py  ui.py  utils.py  variables.py  versions.py
src/modules/widgets/: assistant.py  home.py  logs.py  profiles.py
src/resources/: com.github.XtremeTHN.PyLauncherUI.gresource  com.github.XtremeTHN.PyLauncherUI.gresource.xml
src/ui/: bootstrap-dialog.ui  com.github.XtremeTHN.PyLauncherUI.gresource  com.github.XtremeTHN.PyLauncherUI.gresource.xml  logs-page.ui  main.blp  main.ui  main.xml  profile-conf-page.ui  profile-widget.ui
src/ui/blueprints/: bootstrap-dialog.blp  logs-page.blp  main.blp  profile-conf-page.blp  profile-widget.blp
