[tool.poetry]
name = "pylauncher"
version = "0.1.0"
description = "A minecraft launcher written with python"
authors = ["Axel Valles"]
license = "Apache License 2.0"
readme = "README.md"

#[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.9"
pygobject = "^3.48.1"
pygobject-stubs = "^2.10.0"
colorama = "^0.4.6"
minecraft-launcher-lib = "^6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
